--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,12 @@ on:
   pull_request:
     branches: [master]
 jobs:
-  test_and_build
+  test_and_build:
     runs-on: ubuntu-latest
-    actions:
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '17'
+          java-version: '14'
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
