--- a/.github/maven.yml
+++ b/.github/maven.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: setting up jdk14 
+        uses: actions/setup-java@v3
         with:
           java-version: '14'
-          cache: 'maven'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
         
