--- a/.github/maven.yml
+++ b/.github/maven.yml
@@ -15,7 +15,9 @@ jobs:
       - name: setting up jdk14 
         uses: actions/setup-java@v3
         with:
-          java-version: '14'
+          distribution: 'temurin'
+          java-version: '17'
+          check-latest: true
       - name: Build with Maven
         run: mvn -B package --file pom.xml
         
