--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: '14'
+          distribution: 'temurin'
+          java-version: '17'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
         
